--- a/style.css
+++ b/style.css
@@ -219,8 +219,7 @@ img {
   }
   .nav-links {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-
+    grid-template-columns: repeat(5, 1fr);
     column-gap: 2rem;
     justify-self: end;
   }
@@ -1008,4 +1007,58 @@ img {
 
 .cc {
   color: var(--clr-primary-6);
+}
+
+/* temp translator */
+
+/* @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+* {
+  font-family: "Poppins", sans-serif;
+}
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #f2f2f2;
+}
+.container {
+  position: relative;
+  max-width: 600px;
+  height: 500px;
+  padding: 50px;
+  color: #555;
+  text-align: center;
+}
+.langWrap {
+  background: #333;
+}
+a {
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  padding: 0 15px;
+  font-weight: bold;
+  background: #555656;
+  font-size: 18px;
+}
+a.active {
+  background: #f21313;
+}
+.content {
+  margin-top: 20px;
+  font-size: 20px;
+} */
+
+.langWrap a {
+  text-transform: uppercase;
+  color: var(--clr-gray-6);
+  text-decoration: none;
+  padding: 0 15px;
+  font-weight: bold;
+  /* background: var(--clr-gray-4); */
+  font-size: 18px;
+}
+.langWrap a.active {
+  border-bottom: 2px solid var(--clr-primary-6);
 }
