--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ img {
 
 .nav-header {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
 }
 .nav-btn {
@@ -198,6 +198,7 @@ img {
   font-size: 2rem;
   color: var(--clr-primary-6);
   cursor: pointer;
+  margin-left: 0.5rem;
 }
 
 .temporary {
@@ -205,6 +206,24 @@ img {
 }
 .capitalize {
   text-transform: uppercase;
+}
+.nav-header {
+  display: grid;
+  grid-template-columns: 1fr auto auto;
+  align-items: center;
+}
+
+.langWrap a {
+  text-transform: uppercase;
+  color: var(--clr-gray-6);
+  text-decoration: none;
+  padding: 0 5px;
+  font-weight: bold;
+  /* background: var(--clr-gray-4); */
+  font-size: 18px;
+}
+.langWrap a.active {
+  border-bottom: 2px solid var(--clr-primary-6);
 }
 
 @media screen and (min-width: 768px) {
@@ -214,21 +233,32 @@ img {
   .fixed-nav {
     background-color: var(--clr-white);
   }
+  .nav-header {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+  }
   .nav-btn {
     display: none;
   }
   .nav-links {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     column-gap: 2rem;
     justify-self: end;
   }
-
-  .nav-center {
+  .langWrap {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .langWrap a {
+    padding: 0 15px;
+  }
+  /* .nav-center {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
-  }
+  } */
 }
 
 /* --------------- */
@@ -1007,58 +1037,4 @@ img {
 
 .cc {
   color: var(--clr-primary-6);
-}
-
-/* temp translator */
-
-/* @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
-* {
-  font-family: "Poppins", sans-serif;
-}
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: #f2f2f2;
-}
-.container {
-  position: relative;
-  max-width: 600px;
-  height: 500px;
-  padding: 50px;
-  color: #555;
-  text-align: center;
-}
-.langWrap {
-  background: #333;
-}
-a {
-  text-transform: uppercase;
-  color: #fff;
-  text-decoration: none;
-  padding: 0 15px;
-  font-weight: bold;
-  background: #555656;
-  font-size: 18px;
-}
-a.active {
-  background: #f21313;
-}
-.content {
-  margin-top: 20px;
-  font-size: 20px;
-} */
-
-.langWrap a {
-  text-transform: uppercase;
-  color: var(--clr-gray-6);
-  text-decoration: none;
-  padding: 0 15px;
-  font-weight: bold;
-  /* background: var(--clr-gray-4); */
-  font-size: 18px;
-}
-.langWrap a.active {
-  border-bottom: 2px solid var(--clr-primary-6);
 }
